# OnkoDICOM

./: dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: pythonapp.yml
test/: test_model_batch_processes.py
