[tool.poetry]
name = "OnkoDICOM"
version = "0.5.2"
description = "OnkoDICOM is an extensible open source radiation therapy research platform based on the DICOM standard."
authors = ["Ashley Maher <ashley.maher@didymodesigns.com.au>"]
license = "LGPL-2.1"
readme = "README.md"
homepage = "https://onkodicom.com.au/"
repository = "https://github.com/didymo/OnkoDICOM"

[poetry.virtualenvs]
create = true
in-project = true

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cython = "*"
numpy = "^1.22.0"
platipy ="*"
alphashape = "*"
pandas = "*"
scikit-build = "*"
scipy = "*"
dicompyler-core = "*"
pydicom = "*"
country-list = "*"
scikit-image = "*"
fuzzywuzzy = "*"
PyWavelets ="^1.1.1"
networkx = "*"
pymedphys = ">=0.35,<=0.37.1"
pyside6 ="6.2.0"
vtk = "*" 
shapely = ">=1.8.1,<2.0"
python-Levenshtein = "*"
opencv-python = "*"
matplotlib = "*"
pyradiomics = "*"
scikit-learn = "*"
imblearn = "*"
kaplanmeier = "*"
pyinstaller = "*"


[tool.poetry.group.dev.dependencies]
pylint ="*"
pytest ="*"
pytest-cov ="*"
pytest-pylint ="*"
pytest-qt = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

 
